--- a/Localisation/VoxelWave_Translation_U.csv
+++ b/Localisation/VoxelWave_Translation_U.csv
@@ -45,11 +45,6 @@ Consejo:
 La cabeza mata al instante.
 El cuerpo recibe dos golpes.
 Piernas y Brazos recibe 3 golpes."
-,,,
-,,,
-,,,
-,,,
-,,,
-,,,
-,,,
-,,,
+Back to main Menu,Back to main Menu,Retour au menu principal,Volver al menú principal
+Resume,Resume,CV,Reanudar
+Quit Game,Quit Game,Quitter le jeu,Salir del juego
